feat: created new gradle project